--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "JituBoss",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
